--- a/template/my-leads.html
+++ b/template/my-leads.html
@@ -6,9 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-    content="Edmin admin is super flexible, powerful, clean &amp; modern responsive bootstrap admin template with unlimited possibilities.">
+    content="">
   <meta name="keywords"
-    content="admin template, Edmin admin template, best javascript admin, dashboard template, bootstrap admin template, responsive admin template, web app">
+    content="">
   <meta name="author" content="pixelstrap">
   <title>ACE - My Leads</title>
   <!-- Favicon icon-->
